syntax = "proto3";
package misesid.misestm.v1beta1;

option go_package = "github.com/mises-id/mises-tm/x/misestm/types";

import "gogoproto/gogo.proto";

message MisesAccount {
  string misesID = 1;
  uint64 didRegistryID = 2;
  uint64 didType = 3;
  uint64 infoID = 4;
}